--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -4,6 +4,8 @@
     flex-direction: row;
     justify-content: space-between;
     margin: 92px 48px 24px;
+
+    max-width: calc(100% - 48px * 2);
 }
 
 /* FIGMA 1024 design */
@@ -13,6 +15,7 @@
 @media screen and (max-width: 1023px) {
     .footer {
         margin: 88px 24px 24px;
+        max-width: calc(100% - 24px * 2);
     }
 }
 
@@ -21,5 +24,6 @@
     .footer {
         flex-direction: column;
         margin: 64px auto 24px 16px;
+        max-width: calc(100% - 16px * 2);
     }
 }
