--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,6 +1,7 @@
 .page {
   margin: 0 auto;
-  max-width: 1920px;
+  max-width: 1280px;
+  min-width: 320px;
   font-family: 'Inter', Arial, sans-serif;
   color: #ffffff;
   background-color: #2A2C2F;
