--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,8 +1,7 @@
 /* FIGMA 1280 design (default) */
 .photo-grid {
     margin: 92px auto 0;
-    max-width: calc(100vw - 48px * 2);
-
+    max-width: calc(100% - 48px * 2);
     display: grid;
     gap: 16px;
     grid-template-columns: repeat(auto-fit, minmax(284px, 1fr));
@@ -22,7 +21,7 @@
 @media screen and (max-width: 1023px) {
     .photo-grid {
         margin: 88px auto 0;
-        max-width: calc(100vw - 24px * 2);
+        max-width: calc(100% - 24px * 2);
         gap: 16px;
     }
 }
@@ -31,7 +30,7 @@
 @media screen and (max-width: 425px) {
     .photo-grid {
         margin: 64px auto 0;
-        max-width: calc(100vw - 16px * 2);
+        max-width: calc(100% - 16px * 2);
         gap: 12px;
     }
 }
